# ScriptorDB

./: .gitignore  AGENTS.md  README.md  log_to_file.py  logging_setup.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
agents/: capabilities.py  db_agent.py
browser/: __init__.py  actions.py  context.py  manager.py  runtime.py
cli/: __init__.py  cmd_ask.py  cmd_common.py  cmd_interactive.py  cmd_models.py  cmd_serve.py  cmd_setup.py  cmd_undo.py  commands.py  dispatcher.py  workspace_cli.py
config/: app_config.py  app_context.py  canonical_models.py  global_settings.py  model_cache.py  model_client.py  models.py  provider_adapter.py  recommended_models.json  secrets.py  settings.py  workspace.py  workspace_loader.py  workspace_paths.py  workspace_registry.py  workspace_settings.py
database/: session.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
schemas/: __init__.py  approval.py  chat.py  crawl_models.py  db.py  db_schema.py  health.py  history.py  models.py  mysql.py  session.py  settings.py  sse.py  tool.py  workspace.py
scripts/: layout_diagnostic.py
server/: agent_runner.py  app.py  approval_orchestrator.py  approval_policy.py  dependencies.py  import_inspector.py  run_tracker.py  schemas.py  session_file_store.py  session_model.py  session_store.py  sessions.py  sse_format.py  streaming.py
services/: api_key_service.py  chat_service.py  crawl_service.py  history_service.py  model_service.py  mysql_service.py  prompt_service.py  schema_service.py  settings_service.py  setup_service.py  (+3 more)
(+146 files in other folders)
